[package]
name = "memserve"
version = "0.1.0"
edition = "2021"
description = "Web server that serves static web content from memory."
repository = "https://git.sr.ht/~akhil/crc-catalog"
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bin]]
name = "memserve"
path = "memserve.rs"

[dependencies]
mio = { version = "1.0.2", default-features = false, features = ["net", "os-poll"] }
flate2 = { version = "1.0.34", default-features = false, features = ["rust_backend"] }
