[package]
name = "memserve"
version = "0.1.0"
edition = "2021"
description = "Web server that serves static web content from memory."
repository = "https://git.sr.ht/~akhil/memserve"
readme = "README.md"
license = "0BSD"

[[bin]]
name = "memserve"
path = "memserve.rs"

[dependencies]
mio = { version = "1.1.0", default-features = false, features = ["net", "os-poll"] }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
